@@ -1,1 +1,9 @@
 This portion of project contains an IPL(Indian Premier League) player management system and a server
+
+
+To run the executable jar file IPLPlayerDatabase.jar in out/artifacts/IPLPlayerDatabase_jar write following to cmd :
+java --module-path "path to lib\lib" --add-modules javafx.controls,javafx.fxml -jar "path to jar file\serverClientJava.jar"
+
+
+To run the server run the jar file ServerIPL.jar in out/artifacts/ServerIPL_jar write following to cmd :
+java --module-path "path to lib\lib" --add-modules javafx.controls,javafx.fxml -jar "path to jar file\serverIPL.jar"
